--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,19 +51,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Cell.cs" />
+     <Compile Include="Assets\Scripts\ACell.cs" />
+     <Compile Include="Assets\Scripts\CellFactory.cs" />
      <Compile Include="Assets\Scripts\createSphere.cs" />
      <Compile Include="Assets\Scripts\CubeFall.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\Graphic.cs" />
      <Compile Include="Assets\Scripts\LookAt.cs" />
      <Compile Include="Assets\Scripts\Maze.cs" />
+     <Compile Include="Assets\Scripts\Mode.cs" />
      <Compile Include="Assets\Scripts\Movements.cs" />
      <Compile Include="Assets\Scripts\Node.cs" />
      <Compile Include="Assets\Scripts\OscillatingBall.cs" />
      <Compile Include="Assets\Scripts\PathFinder.cs" />
      <Compile Include="Assets\Scripts\PathFollower.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\StandardCell.cs" />
      <Compile Include="Assets\Scripts\Wall.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
